--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,13 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   },
-  "files": []
+  "files": [],
+  "references": [
+    {
+      "path": "./projects/www/tsconfig.app.json"
+    },
+    {
+      "path": "./projects/www/tsconfig.spec.json"
+    }
+  ]
 }
